# media-intake

./: README.md  pyproject.toml
docs/guides/: audio.md  install-global-alias.md  project-adapters.md  video.md
docs/superpowers/plans/: 2026-07-03-media-intake-mvp.md
docs/superpowers/specs/: 2026-07-03-media-intake-design.md
skills/claude/: media-intake.md
skills/media-intake/: SKILL.md
src/media_intake/: __init__.py  adapters.py  cli.py  commands.py  dedupe_frames.py  distill.py  packet.py  sources.py
tests/: test_adapters.py  test_bin_wrapper.py  test_cli.py  test_distill.py  test_packet.py  test_sources.py
