[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "media-intake"
version = "0.1.0"
description = "Local reusable media extraction toolkit for evidence packets"
requires-python = ">=3.9"

[project.scripts]
media-intake = "media_intake.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
